k8s/apps/plouf-plouf/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: plouf-plouf
spec:
  selector:
    app: plouf-plouf
  ports:
    - port: 80
      targetPort: 3000
