k8s/apps/plouf-plouf/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: plouf-plouf
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod

spec:
  ingressClassName: traefik
  tls:
  - hosts:
      - plouf-plouf.fr
    secretName: plouf-plouf-tls
  rules:
    - host: plouf-plouf.fr
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: plouf-plouf
                port:
                  number: 80
